tests/fcode/errors/err_duplicate_variable_module.f90
module m
  integer :: n
  real :: n
end module m
